re PR c/35433 (ICE with typeof and ternary operator)

PR c/35433
	* c-typeck.c (composite_type): Set TYPE_SIZE and TYPE_SIZE_UNIT
	for composite type involving a zero-length array type.

testsuite:
	* gcc.dg/init-bad-6.c: New test.

From-SVN: r143922